# zenwiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture-diagrams.md  pyproject.toml
.github/workflows/: ci.yml
core/: CONTRIBUTING.md  architecture-diagrams.md  pyproject.toml
core/src/zenwiki/: __init__.py  cli.py  compiler.py  dedup.py  index.py  lint.py  manifest.py  markdown.py  search.py  web.py
core/src/zenwiki/static/: index.html
core/src/zenwiki/static/assets/: index-ByvEgpfh.js  index-CrIdLp3b.js  index-CymqArH0.css
core/web/: index.html  package-lock.json  vite.config.ts
core/web/src/: App.tsx  api.ts  index.css  types.ts
core/web/src/components/: Header.tsx  SearchBar.tsx  Sidebar.tsx  Viewer.tsx
my-wiki/: .gitignore  CLAUDE.md  config.yaml
my-wiki/.claude/: settings.json
my-wiki/.claude/skills/zenwiki-ask/: SKILL.md
my-wiki/wiki/: index.md  log.md
src/zenwiki/: __init__.py  cli.py  compiler.py  config.py  index.py  lint.py  manifest.py  pending.py  search.py  web.py
src/zenwiki/static/: index.html
src/zenwiki/static/assets/: index-C4CJnEME.css
src/zenwiki/templates/: CLAUDE.md  config.yaml
web/: package.json
web/src/: types.ts
web/src/components/: SearchBar.tsx  TreeNode.tsx
